[package]
name = "dkreg"
version = "0.1.0"
authors = ["Rafael Alcaraz Mercado <ramerc@microsoft.com>"]
edition = "2018"

[dependencies]
recap = "0.1.1"
reqwest = "0.10.7"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.40"
structopt="0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
futures = "0.3"