[package]
name = "mcr"
version = "0.1.0"
authors = ["Rafael Alcaraz Mercado <ramerc@microsoft.com>"]
edition = "2018"

[dependencies]
dkreg = { path = "../dkreg" }
serde = "1.0.91"
serde_json = "1.0.40"
structopt="0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
tokio = { version = "0.2", features = ["full"] }